@@ -6,6 +6,7 @@ Release 0.7.1: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-2567. Tez UI: download dag data does not work within ambari
   TEZ-2554. Tez UI: View log link does not correctly propagate login crendential to read log from yarn web.
   TEZ-2547. Tez UI: Download Data fails on secure, cross-origin clusters
   TEZ-2546. Tez UI: Fetch hive query text from timeline if dagInfo is not set.
